# enigma2.pli4.0

./: configure.ac  mytest.py  skin.py
data/: Makefile.am  keymap.xml  menu.xml
data/force1/: Makefile.am  skin.xml
data/force1/buttons/: Makefile.am
data/force1/icons/: Makefile.am
data/force1/pic/: Makefile.am
data/force1/skin_default/buttons/: Makefile.am
data/force1/skin_default/icons/: Makefile.am
data/rc_models/: Makefile.am  optimuss.xml  rc_models.cfg
data/rc_models/tm/: Makefile.am
data/rc_models/tm/force1plus/: Makefile.am  rcpositions.xml
data/rc_models/tm/force2/: Makefile.am
data/rc_models/tm/optimussos1plus/: Makefile.am
data/rc_models/tm/optimussos2plus/: Makefile.am
data/rc_models/tm/tmnano2super/: Makefile.am  rcpositions.xml
lib/dvb_ci/: Makefile.inc  dvbci.cpp  dvbci_datetimemgr.cpp  dvbci_session.cpp
lib/python/Components/: About.py  UsageConfig.py
lib/python/Components/Converter/: Makefile.am
lib/python/Components/Renderer/: Makefile.am
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/TempFanControl/: plugin.py
lib/python/Screens/: About.py  ChangeRCU.py  ChoiceBox.py  FactoryReset.py  InfoBarGenerics.py  Makefile.am  Rc.py  TestMenu.py  Update.py
lib/python/Tools/: HardwareInfo.py
po/: ru.po
