SUBDIRS = buttons epg fonts icons sel skin_default pic

installdir = $(pkgdatadir)/force1

dist_install_DATA = \
	710line.png       bat_on_red.png     b_br.png   b_tl.png     clock_line.png  green_.png  infobar.png   mute.png      picon_default.png  radiobk.png  vol.png \
	bar_snr_osd.png   bat_on_yellow.png  b_l.png    b_t.png      dvd.png         green.png   line1100.png  no-key.png    po_bar_a.png       red_.png     skin.xml          wizard.png \
	bar_snr_wh.png    bat_.png           blue_.png  b_tr.png     emc.png         grey_.png   Makefile.am   p_bar_b.png   po_bar_b.png       red.png      timeline-now.png  yellow_.png \
	bat_back.png      b_bl.png           blue.png   grey.png    mediabar.png  p_bar_wh.png  po_bar.png         sbar.png     tube.png          yellow.png \
	bat_on_green.png  b_b.png            b_r.png    ch-line.png  movie.png     prev.png           vol_back.png
