installdir = $(pkgdatadir)/force1/buttons

dist_install_DATA = \
	blue.png  green.png  info.png  ok.png   radio.png  repeat_off.png  right.png        shuffle_on.png  tv.png \
	exit.png  help.png   left.png  menu.png     pvr.png  red.png    repeat_on.png   shuffle_off.png  text.png        yellow.png

