installdir = $(pkgdatadir)/force1/icons

dist_install_DATA = \
	ico_3g_on.png      ico_dmix_off.png   ico_format_off.png  ico_hd_off.png    ico_rec_off.png           ico_stream_on.png  ico_terrestrial_on.png  ico_www_off.png  input_question.png  repeat_on.png \
	ico_cable_on.png   ico_dmix_on.png    ico_format_on.png   ico_hd_on.png     ico_rec_on.png            ico_sub_off.png    ico_txt_off.png         ico_www_on.png   shuffle_off.png \
	ico_crypt_off.png  ico_dolby_off.png  ico_hbb_off.png     ico_lan_on.png    ico_satellites_on.png     ico_sub_on.png     ico_txt_on.png          input_error.png  marker.png          shuffle_on.png \
	ico_crypt_on.png   ico_dolby_on.png   ico_hbb_on.png      ico_radio_on.png  ico_satellites_s2_on.png  ico_temp.png       ico_wifi_on.png         input_info.png   repeat_off.png

