installdir = $(pkgdatadir)/force1/skin_default/icons

dist_install_DATA = \
dish.png       ico_dvb_c-fs8.png  ico_dvb_s.png      ico_mp_forward.png  ico_mp_rewind.png   icon_crypt.png             ico_stream-fs8.png  lock_off.png  marker.png  selectioncross.png \
dish_scan.png  ico_dvb_c.png      ico_dvb_t-fs8.png  ico_mp_pause.png    ico_mp_stop.png     ico_service_group-fs8.png  ico_stream.png      lock_on.png   record.png \
folder.png     ico_dvb_s-fs8.png  ico_dvb_t.png      ico_mp_play.png     icon_crypt-fs8.png  ico_service_group.png      lock_error.png      redx.png
