installdir = $(pkglibdir)/python/Components/Converter

install_PYTHON = \
	__init__.py ClockToText.py Converter.py EventName.py StaticText.py EventTime.py \
	Poll.py RemainingToText.py StringList.py ServiceName.py FrontendInfo.py ServiceInfo.py \
	ConditionalShowHide.py ServicePosition.py ValueRange.py RdsInfo.py Streaming.py \
	StaticMultiList.py ServiceTime.py MovieInfo.py MenuEntryCompare.py StringListSelection.py \
	ServiceOrbitalPosition.py CryptoInfo.py TextCase.py \
	ValueBitTest.py TunerInfo.py ConfigEntryTest.py TemplatedMultiContent.py ProgressToText.py \
	Combine.py SensorToText.py ValueToPixmap.py PliExtraInfo.py genre.py ChannelNumbers.py \
	AC3DownMixStatus.py CaidBar.py ConverterRotator.py  EcmInfoLine.py ExtraNumText.py MemoryInfo.py RouteInfo.py ServiceInfoEX.py ServiceOrbitalPosition2.py YWeather.py \
	AlwaysTrue.py CaidInfo2.py  CpuUsage.py EmuName.py  FanTempInfo.py ProgressDiskSpaceInfo.py RWeather.py TunerBar.py \
	Bitrate2.py CamdInfo3.py  DiskInfo.py EventName2.py FrontendInfo2.py  RefString.py ServiceInfo2.py ServiceName2.py WiFiInfo.py bitratecalc.so

